PROJECT(GTATOOLS CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(GTAIMG_BUILD "Whether you want gtaimg to be built" ON)
OPTION(GTATXD_BUILD "Whether you want gtatxd to be built" ON)
OPTION(GTATOOLS_GUI_BUILD "Whether you want gtatools-gui to be built" ON)


MACRO(CHECK_LIBRARY LIB_NAME LIB_DESCR)
	STRING(TOUPPER "${LIB_NAME}" LIB_NAME_UPPER)
	FIND_LIBRARY(${LIB_NAME_UPPER}_LIB_PATH ${LIB_NAME} DOC "Path to library ${LIB_DESCR} (including the library file itself)")
	IF(NOT ${LIB_NAME_UPPER}_LIB_PATH)
		MESSAGE("WARNING: Failed to automatically find library ${LIB_DESCR}. Don't forget to manually set ${LIB_NAME_UPPER}_LIB_PATH to the library path!")
		SET(${LIB_NAME_UPPER}_LIB_PATH "NOT_FOUND")
	ENDIF(NOT ${LIB_NAME_UPPER}_LIB_PATH)
ENDMACRO(CHECK_LIBRARY)


IF(GTAIMG_BUILD OR GTATXD_BUILD)
	SET(NEED_BOOST_REGEX ON)
ENDIF(GTAIMG_BUILD OR GTATXD_BUILD)
IF(GTATXD_BUILD OR GTATOOLS_GUI_BUILD)
	SET(NEED_IL ON)
	SET(NEED_SQUISH ON)
ENDIF(GTATXD_BUILD OR GTATOOLS_GUI_BUILD)
IF (GTATOOLS_GUI_BUILD)
	SET(NEED_WXWIDGETS ON)
ENDIF(GTATOOLS_GUI_BUILD)

IF(NEED_BOOST_REGEX)
	CHECK_LIBRARY(boost_regex Boost::Regex)
	FIND_PATH(BOOST_INCLUDE_PATH boost/regex.hpp)
	INCLUDE_DIRECTORIES(${BOOST_INCLUDE_PATH})
ENDIF(NEED_BOOST_REGEX)
IF(NEED_IL)
	CHECK_LIBRARY(IL DevIL)
	FIND_PATH(DEVIL_INCLUDE_PATH IL/il.h)
	INCLUDE_DIRECTORIES(${DEVIL_INCLUDE_PATH})
ENDIF(NEED_IL)
IF(NEED_SQUISH)
	CHECK_LIBRARY(squish Squish)
	FIND_PATH(SQUISH_INCLUDE_PATH squish.h)
	INCLUDE_DIRECTORIES(${SQUISH_INCLUDE_PATH})
ENDIF(NEED_SQUISH)


IF(GTATOOLS_GUI_BUILD)
	FIND_PACKAGE(wxWidgets COMPONENTS base core)
	INCLUDE(${wxWidgets_USE_FILE})
ENDIF(GTATOOLS_GUI_BUILD)

ADD_SUBDIRECTORY(libgtaformats)

IF(GTAIMG_BUILD)
	ADD_SUBDIRECTORY(gtaimg)
ENDIF(GTAIMG_BUILD)

IF(GTATXD_BUILD)
	ADD_SUBDIRECTORY(gtatxd)
ENDIF(GTATXD_BUILD)

IF(GTATOOLS_GUI_BUILD)
	ADD_SUBDIRECTORY(gtatools-gui)
ENDIF(GTATOOLS_GUI_BUILD)
