ADD_SUBDIRECTORY(src)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

INCLUDE_DIRECTORIES(${GF_INCLUDE_DIR})
ADD_EXECUTABLE(gtaimg ${SRC_PATHS})
TARGET_LINK_LIBRARIES(gtaimg gtaformats ${BOOST_REGEX_LIB_PATH})

INSTALL(	TARGETS gtaimg
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
