ADD_SUBDIRECTORY(src)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

INCLUDE_DIRECTORIES(${GF_INCLUDE_DIR})
ADD_DEFINITIONS(-DIL_NO_UNICODE)
ADD_EXECUTABLE(gtatools-gui ${SRC_PATHS})
TARGET_LINK_LIBRARIES(gtatools-gui gtaformats ${SQUISH_LIB_PATH} ${IL_LIB_PATH} ${wxWidgets_LIBRARIES})

INSTALL(	TARGETS gtatools-gui
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
