SET(SRC_FILES
	cliarg ExtractVisitor ListVisitor main
	)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

INCLUDE_DIRECTORIES(${GF_INCLUDE_DIR})
ADD_SUBDIRECTORY(src)
ADD_EXECUTABLE(gtatxd ${SRC_PATHS})
TARGET_LINK_LIBRARIES(gtatxd gtaformats ${BOOST_REGEX_LIB_PATH} ${SQUISH_LIB_PATH} ${IL_LIB_PATH})

INSTALL(	TARGETS gtatxd
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
