PROJECT(LIBGTAFORMATS CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(GF_STATIC_BUILD "Do you want to build the library as a static library?" ON)
OPTION(GF_USE_SQUISH "Do you want to compile libgtaformats against libsquish? You'll need to do so for compressed TXD textures." ON)

INCLUDE("../CMakeModules.txt")

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(${LIBGTAFORMATS_BINARY_DIR}/src/gtaformats)


FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/gtaformats/${SRC_FILE})
ENDFOREACH(SRC_FILE)
FOREACH(INC_FILE ${INC_FILES})
	SET(INC_PATHS ${INC_PATHS} src/gtaformats/${INC_FILE}.h)
ENDFOREACH(INC_FILE)

IF(GF_STATIC_BUILD)
	ADD_LIBRARY(gtaformats STATIC ${SRC_PATHS})
ELSE(GF_STATIC_BUILD)
	ADD_LIBRARY(gtaformats SHARED ${SRC_PATHS})
ENDIF(GF_STATIC_BUILD)

IF(GF_USE_SQUISH)
	DEPEND_SQUISH(gtaformats)
ENDIF(GF_USE_SQUISH)

INSTALL(	TARGETS gtaformats
		DESTINATION lib
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
		)
INSTALL(	FILES ${INC_PATHS}
		DESTINATION include/gtaformats
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
		)

SET(GTAFORMATS_BUILD_INCLUDE_DIR ${LIBGTAFORMATS_SOURCE_DIR}/src PARENT_SCOPE)
