CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(GTAIMG_BUILD "Whether you want gtaimg to be built" ON)
OPTION(GTATXD_BUILD "Whether you want gtatxd to be built" ON)
OPTION(GTATOOLS_GUI_BUILD "Whether you want gtatools-gui to be built" ON)

SET(CPACK_DESCRIPTION_SUMMARY "A set of different tools for work with file formats of the GTA series.")
SET(CPACK_PACKAGE_VENDOR "Alemarius Nexus")
SET(CPACK_VERSION_MAJOR 0)
SET(CPACK_VERSION_MINOR 1)
INCLUDE(CPack)

ADD_SUBDIRECTORY(libgtaformats)
SET(GTAFORMATS_INCLUDE_PATH ${GTAFORMATS_BUILD_INCLUDE_DIR})
SET(GTAFORMATS_LIB_PATH gtaformats)

IF(GTAIMG_BUILD)
	ADD_SUBDIRECTORY(gtaimg)
ENDIF(GTAIMG_BUILD)

IF(GTATXD_BUILD)
	ADD_SUBDIRECTORY(gtatxd)
ENDIF(GTATXD_BUILD)

IF(GTATOOLS_GUI_BUILD)
	ADD_SUBDIRECTORY(gtatools-gui)
ENDIF(GTATOOLS_GUI_BUILD)
