CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(gtatools-gtatxd CXX)

ADD_SUBDIRECTORY(gtatxd)

SET(GTAFORMATS_INCLUDE_PATH '' CACHE PATH "Path to the gtaformats include dir (EXCLUDING the 'gtaformats' part)")
SET(GTAFORMATS_LIB_PATH 'gtaformats' CACHE PATH "Path to (or name of) the libgtaformats library file")
SET(BOOST_INCLUDE_PATH '' CACHE PATH "Path to the Boost include dir")
SET(BOOST_REGEX_LIB_PATH 'boost_regex' CACHE PATH "Path to (or name of) the Boost::RegEx library file")
SET(SQUISH_INCLUDE_PATH '' CACHE PATH "Directory containing libsquish header files.")
SET(SQUISH_LIB_PATH 'squish' CACHE PATH "Path to (or name of) libsquish library file")
SET(PNG_INCLUDE_PATH '' CACHE PATH "Path to the libpng include dir")
SET(PNG_LIB_PATH 'png' CACHE PATH "Path to (or name of) the libpng library file")

IF(NOT GTAFORMATS_LIB_PATH)
	SET(GTAFORMATS_LIB_PATH gtaformats)
ENDIF(NOT GTAFORMATS_LIB_PATH)
IF(NOT BOOST_REGEX_LIB_PATH)
	SET(BOOST_REGEX_LIB_PATH boost_regex)
ENDIF(NOT BOOST_REGEX_LIB_PATH)
IF(NOT SQUISH_LIB_PATH)
	SET(SQUISH_LIB_PATH squish)
ENDIF(NOT SQUISH_LIB_PATH)
IF(NOT PNG_LIB_PATH)
	SET(PNG_LIB_PATH png)
ENDIF(NOT PNG_LIB_PATH)

INCLUDE_DIRECTORIES(${GTAFORMATS_INCLUDE_PATH} ${BOOST_INCLUDE_PATH} ${SQUISH_INCLUDE_PATH} ${PNG_INCLUDE_PATH})

ADD_EXECUTABLE(gtatxd ${SRCS})
TARGET_LINK_LIBRARIES(gtatxd ${BOOST_REGEX_LIB_PATH} ${GTAFORMATS_LIB_PATH} ${SQUISH_LIB_PATH} ${PNG_LIB_PATH})

INSTALL(TARGETS gtatxd DESTINATION bin)

