PROJECT(GTAIMG CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CPACK_DESCRIPTION_SUMMARY "A command-line utility for listing and extracting files from GTA .img/.dir files.")
SET(CPACK_PACKAGE_VENDOR "Alemarius Nexus")
SET(CPACK_VERSION_MAJOR 0)
SET(CPACK_VERSION_MINOR 1)
INCLUDE(CPack)


MACRO(ADD_LIBRARY_DEPENDENCY LIB_NAME LIB_DESCR LIB_HEADER)
	STRING(TOUPPER ${LIB_NAME} LIB_NAME_UPPER)
	FIND_LIBRARY(${LIB_NAME_UPPER}_LIB_PATH ${LIB_NAME} DOC "Path to library ${LIB_DESCR} (including the library file itself)")
	IF(NOT ${LIB_NAME_UPPER}_LIB_PATH)
		MESSAGE("WARNING: Failed to automatically find library ${LIB_DESCR}. Don't forget to manually set ${LIB_NAME_UPPER}_LIB_PATH to the library path!")
		SET(${LIB_NAME_UPPER}_LIB_PATH "NOT_FOUND")
	ENDIF(NOT ${LIB_NAME_UPPER}_LIB_PATH)

	FIND_PATH(${LIB_NAME_UPPER}_INCLUDE_PATH ${LIB_HEADER})
	SET(LIB_INCLUDE_PATH ${LIB_NAME_UPPER}_INCLUDE_PATH)
	INCLUDE_DIRECTORIES(${${LIB_INCLUDE_PATH}})
ENDMACRO(ADD_LIBRARY_DEPENDENCY)

IF(NOT DEFINED GTAFORMATS_INCLUDE_PATH)
	ADD_LIBRARY_DEPENDENCY(gtaformats gtaformats gtaformats/gtaimg.h)
ENDIF(NOT DEFINED GTAFORMATS_INCLUDE_PATH)

ADD_LIBRARY_DEPENDENCY(boost_regex Boost::Regex boost/regex.hpp)

ADD_SUBDIRECTORY(src)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

INCLUDE_DIRECTORIES(${GTAFORMATS_INCLUDE_PATH}/gtaformats)
ADD_EXECUTABLE(gtaimg ${SRC_PATHS})
TARGET_LINK_LIBRARIES(gtaimg ${GTAFORMATS_LIB_PATH} ${BOOST_REGEX_LIB_PATH})

INSTALL(	TARGETS gtaimg
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
