PROJECT(GTAIMG CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE("../CMakeModules.txt")

ADD_SUBDIRECTORY(src)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

INCLUDE_DIRECTORIES(${GTAFORMATS_INCLUDE_PATH}/gtaformats)
ADD_EXECUTABLE(gtaimg ${SRC_PATHS})

DEPEND_BOOST_REGEX(gtaimg)
DEPEND_GTAFORMATS(gtaimg)

INSTALL(	TARGETS gtaimg
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
