PROJECT(GTATOOLS-GUI CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE("../CMakeModules.txt")

IF(WIN32)
	SET(wxWidgets_CONFIGURATION mswud)
ELSE(WIN32)
	SET(wxWidgets_USE_DEBUG ON)
	SET(wxWidgets_USE_UNICODE ON)
ENDIF(WIN32)

ADD_SUBDIRECTORY(src)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

OPTION(IL_NO_UNICODE "Select this to use DevIL without unicode support" ON)

INCLUDE_DIRECTORIES(${GTAFORMATS_INCLUDE_PATH}/gtaformats)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
IF(IL_NO_UNICODE)
	ADD_DEFINITIONS(-DIL_NO_UNICODE)
ENDIF(IL_NO_UNICODE)
ADD_EXECUTABLE(gtatools-gui WIN32 ${SRC_PATHS})

DEPEND_WXWIDGETS(gtatools-gui)
DEPEND_DEVIL(gtatools-gui)
DEPEND_GTAFORMATS(gtatools-gui)

INSTALL(	TARGETS gtatools-gui
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
