PROJECT(GTATXD CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE("../CMakeModules.txt")

ADD_SUBDIRECTORY(src)

FOREACH(SRC_FILE ${SRC_FILES})
	SET(SRC_PATHS ${SRC_PATHS} src/${SRC_FILE})
ENDFOREACH(SRC_FILE)

INCLUDE_DIRECTORIES(${GTAFORMATS_INCLUDE_PATH}/gtaformats)
ADD_EXECUTABLE(gtatxd ${SRC_PATHS})

DEPEND_BOOST_REGEX(gtatxd)
DEPEND_DEVIL(gtatxd)
DEPEND_GTAFORMATS(gtatxd)

INSTALL(	TARGETS gtatxd
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
		)
INSTALL(	FILES ${IL_LIB_PATH}
		DESTINATION bin
		)
